[gd_scene load_steps=3 format=3 uid="uid://0lu4ori328nx"]

[ext_resource type="Script" uid="uid://cjhgegq1y0gpf" path="res://scenes/menus/scripts/quit_menu.gd" id="1_hdr1l"]
[ext_resource type="FontFile" uid="uid://c6o2q18e80rdv" path="res://assets/FugazOne-Regular.ttf" id="2_2ct2x"]

[node name="QuitMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdr1l")

[node name="QuitPanelMargins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 512
theme_override_constants/margin_top = 256
theme_override_constants/margin_right = 512
theme_override_constants/margin_bottom = 256

[node name="QuitPanel" type="PanelContainer" parent="QuitPanelMargins"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="QuitPanelMargins/QuitPanel"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="QuitPanelMargins/QuitPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="QuitPanelMargins/QuitPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2ct2x")
theme_override_font_sizes/font_size = 90
text = "Are you sure you
want to quit?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="QuitPanelMargins/QuitPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Confirm" type="Button" parent="QuitPanelMargins/QuitPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_2ct2x")
theme_override_font_sizes/font_size = 75
text = "QUIT"

[node name="Cancel" type="Button" parent="QuitPanelMargins/QuitPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_2ct2x")
theme_override_font_sizes/font_size = 75
text = "CANCEL"

[connection signal="pressed" from="QuitPanelMargins/QuitPanel/MarginContainer/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="QuitPanelMargins/QuitPanel/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
